src/parser/AVMParser.java
// Generated from AVM.g4 by ANTLR 4.9.3
package parser;

import java.util.HashMap;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AVMParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, LOADI=3, PUSH=4, POP=5, ADD=6, SUB=7, MULT=8, DIV=9, STOREW=10, 
		LOADW=11, STOREB=12, LOADB=13, BRANCH=14, BRANCHEQ=15, BRANCHLESST=16, 
		BRANCHLESSEQ=17, JAL=18, PRINT=19, HALT=20, COL=21, LABEL=22, NUMBER=23, 
		REGISTER=24, WHITESP=25, ERR=26;
	public static final int
		RULE_assembly = 0, RULE_instruction = 1;
	private static String[] makeRuleNames() {
		return new String[] {
			"assembly", "instruction"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'li'", "'push'", "'pop'", "'add'", "'sub'", "'mult'", 
			"'div'", "'sw'", "'lw'", "'sb'", "'lb'", "'b'", "'beq'", "'blt'", "'ble'", 
			"'jal'", "'print'", "'halt'", "':'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, "LOADI", "PUSH", "POP", "ADD", "SUB", "MULT", "DIV", 
			"STOREW", "LOADW", "STOREB", "LOADB", "BRANCH", "BRANCHEQ", "BRANCHLESST", 
			"BRANCHLESSEQ", "JAL", "PRINT", "HALT", "COL", "LABEL", "NUMBER", "REGISTER", 
			"WHITESP", "ERR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AVM.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AVMParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class AssemblyContext extends ParserRuleContext {
		public List<InstructionContext> instruction() {
			return getRuleContexts(InstructionContext.class);
		}
		public InstructionContext instruction(int i) {
			return getRuleContext(InstructionContext.class,i);
		}
		public AssemblyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assembly; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AVMListener ) ((AVMListener)listener).enterAssembly(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AVMListener ) ((AVMListener)listener).exitAssembly(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AVMVisitor ) return ((AVMVisitor<? extends T>)visitor).visitAssembly(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssemblyContext assembly() throws RecognitionException {
		AssemblyContext _localctx = new AssemblyContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_assembly);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(7);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LOADI) | (1L << PUSH) | (1L << POP) | (1L << ADD) | (1L << SUB) | (1L << MULT) | (1L << DIV) | (1L << STOREW) | (1L << LOADW) | (1L << STOREB) | (1L << LOADB) | (1L << BRANCH) | (1L << BRANCHEQ) | (1L << BRANCHLESST) | (1L << BRANCHLESSEQ) | (1L << JAL) | (1L << PRINT) | (1L << HALT) | (1L << LABEL))) != 0)) {
				{
				{
				setState(4);
				instruction();
				}
				}
				setState(9);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionContext extends ParserRuleContext {
		public Token r;
		public Token n;
		public Token rDest;
		public Token r1;
		public Token r2;
		public Token rScr;
		public Token rSrc;
		public Token l;
		public TerminalNode LOADI() { return getToken(AVMParser.LOADI, 0); }
		public TerminalNode PUSH() { return getToken(AVMParser.PUSH, 0); }
		public TerminalNode POP() { return getToken(AVMParser.POP, 0); }
		public TerminalNode ADD() { return getToken(AVMParser.ADD, 0); }
		public TerminalNode SUB() { return getToken(AVMParser.SUB, 0); }
		public TerminalNode MULT() { return getToken(AVMParser.MULT, 0); }
		public TerminalNode DIV() { return getToken(AVMParser.DIV, 0); }
		public TerminalNode STOREW() { return getToken(AVMParser.STOREW, 0); }
		public TerminalNode LOADW() { return getToken(AVMParser.LOADW, 0); }
		public TerminalNode STOREB() { return getToken(AVMParser.STOREB, 0); }
		public TerminalNode LOADB() { return getToken(AVMParser.LOADB, 0); }
		public TerminalNode COL() { return getToken(AVMParser.COL, 0); }
		public TerminalNode BRANCH() { return getToken(AVMParser.BRANCH, 0); }
		public TerminalNode BRANCHEQ() { return getToken(AVMParser.BRANCHEQ, 0); }
		public TerminalNode BRANCHLESSEQ() { return getToken(AVMParser.BRANCHLESSEQ, 0); }
		public TerminalNode BRANCHLESST() { return getToken(AVMParser.BRANCHLESST, 0); }
		public TerminalNode JAL() { return getToken(AVMParser.JAL, 0); }
		public TerminalNode PRINT() { return getToken(AVMParser.PRINT, 0); }
		public TerminalNode HALT() { return getToken(AVMParser.HALT, 0); }
		public List<TerminalNode> REGISTER() { return getTokens(AVMParser.REGISTER); }
		public TerminalNode REGISTER(int i) {
			return getToken(AVMParser.REGISTER, i);
		}
		public TerminalNode NUMBER() { return getToken(AVMParser.NUMBER, 0); }
		public TerminalNode LABEL() { return getToken(AVMParser.LABEL, 0); }
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AVMListener ) ((AVMListener)listener).enterInstruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AVMListener ) ((AVMListener)listener).exitInstruction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AVMVisitor ) return ((AVMVisitor<? extends T>)visitor).visitInstruction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstructionContext instruction() throws RecognitionException {
		InstructionContext _localctx = new InstructionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_instruction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(10);
				match(LOADI);
				setState(11);
				((InstructionContext)_localctx).r = match(REGISTER);
				setState(12);
				((InstructionContext)_localctx).n = match(NUMBER);
				}
				break;
			case 2:
				{
				setState(13);
				match(PUSH);
				setState(14);
				((InstructionContext)_localctx).r = match(REGISTER);
				}
				break;
			case 3:
				{
				setState(15);
				match(PUSH);
				setState(16);
				((InstructionContext)_localctx).n = match(NUMBER);
				}
				break;
			case 4:
				{
				setState(17);
				match(POP);
				}
				break;
			case 5:
				{
				setState(18);
				match(ADD);
				setState(19);
				((InstructionContext)_localctx).rDest = match(REGISTER);
				setState(20);
				((InstructionContext)_localctx).r1 = match(REGISTER);
				setState(21);
				((InstructionContext)_localctx).r2 = match(REGISTER);
				}
				break;
			case 6:
				{
				setState(22);
				match(SUB);
				setState(23);
				((InstructionContext)_localctx).rDest = match(REGISTER);
				setState(24);
				((InstructionContext)_localctx).r1 = match(REGISTER);
				setState(25);
				((InstructionContext)_localctx).r2 = match(REGISTER);
				}
				break;
			case 7:
				{
				setState(26);
				match(MULT);
				setState(27);
				((InstructionContext)_localctx).rDest = match(REGISTER);
				setState(28);
				((InstructionContext)_localctx).r1 = match(REGISTER);
				setState(29);
				((InstructionContext)_localctx).r2 = match(REGISTER);
				}
				break;
			case 8:
				{
				setState(30);
				match(DIV);
				setState(31);
				((InstructionContext)_localctx).rDest = match(REGISTER);
				setState(32);
				((InstructionContext)_localctx).r1 = match(REGISTER);
				setState(33);
				((InstructionContext)_localctx).r2 = match(REGISTER);
				}
				break;
			case 9:
				{
				setState(34);
				match(STOREW);
				setState(35);
				((InstructionContext)_localctx).rScr = match(REGISTER);
				setState(36);
				((InstructionContext)_localctx).n = match(NUMBER);
				setState(37);
				match(T__0);
				setState(38);
				((InstructionContext)_localctx).rDest = match(REGISTER);
				setState(39);
				match(T__1);
				}
				break;
			case 10:
				{
				setState(40);
				match(LOADW);
				setState(41);
				((InstructionContext)_localctx).rDest = match(REGISTER);
				setState(42);
				((InstructionContext)_localctx).n = match(NUMBER);
				setState(43);
				match(T__0);
				setState(44);
				((InstructionContext)_localctx).rSrc = match(REGISTER);
				setState(45);
				match(T__1);
				}
				break;
			case 11:
				{
				setState(46);
				match(STOREB);
				setState(47);
				((InstructionContext)_localctx).rScr = match(REGISTER);
				setState(48);
				((InstructionContext)_localctx).n = match(NUMBER);
				setState(49);
				match(T__0);
				setState(50);
				((InstructionContext)_localctx).rDest = match(REGISTER);
				setState(51);
				match(T__1);
				}
				break;
			case 12:
				{
				setState(52);
				match(LOADB);
				setState(53);
				((InstructionContext)_localctx).rDest = match(REGISTER);
				setState(54);
				((InstructionContext)_localctx).n = match(NUMBER);
				setState(55);
				match(T__0);
				setState(56);
				((InstructionContext)_localctx).rSrc = match(REGISTER);
				setState(57);
				match(T__1);
				}
				break;
			case 13:
				{
				setState(58);
				((InstructionContext)_localctx).l = match(LABEL);
				setState(59);
				match(COL);
				}
				break;
			case 14:
				{
				setState(60);
				match(BRANCH);
				setState(61);
				((InstructionContext)_localctx).l = match(LABEL);
				}
				break;
			case 15:
				{
				setState(62);
				match(BRANCHEQ);
				setState(63);
				((InstructionContext)_localctx).r1 = match(REGISTER);
				setState(64);
				((InstructionContext)_localctx).r2 = match(REGISTER);
				setState(65);
				((InstructionContext)_localctx).l = match(LABEL);
				}
				break;
			case 16:
				{
				setState(66);
				match(BRANCHLESSEQ);
				setState(67);
				((InstructionContext)_localctx).r1 = match(REGISTER);
				setState(68);
				((InstructionContext)_localctx).r2 = match(REGISTER);
				setState(69);
				((InstructionContext)_localctx).l = match(LABEL);
				}
				break;
			case 17:
				{
				setState(70);
				match(BRANCHLESST);
				setState(71);
				((InstructionContext)_localctx).r1 = match(REGISTER);
				setState(72);
				((InstructionContext)_localctx).r2 = match(REGISTER);
				setState(73);
				((InstructionContext)_localctx).l = match(LABEL);
				}
				break;
			case 18:
				{
				setState(74);
				match(JAL);
				setState(75);
				((InstructionContext)_localctx).l = match(LABEL);
				}
				break;
			case 19:
				{
				setState(76);
				match(PRINT);
				setState(77);
				((InstructionContext)_localctx).r = match(REGISTER);
				}
				break;
			case 20:
				{
				setState(78);
				match(HALT);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}